trace_decoder/src/snapshots/trace_decoder__winnow_witness__witness_test_vectors-5.snap
---
source: trace_decoder/src/winnow_witness.rs
expression: "witness::<winnow::error::ContextError>(&mut &*vector.bytes)"
---
Err(
    Backtrack(
        ContextError {
            context: [],
            cause: Some(
                Io(
                    Error {
                        kind: UnexpectedEof,
                        message: "failed to fill whole buffer",
                    },
                ),
            ),
        },
    ),
)
